# sudoku-rs

./: Cargo.toml  README.md
benches/: basic.rs
src/: lib.rs  main.rs
