[package]
name = "sudoku-rs"
version = "0.1.0"
authors = ["robin <dequanzh@usc.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = { version = "0.3", features = [ "html_reports" ] }

[[bench]]
name = "basic"
harness = false
